compiler/tests/en/errors/bound_not_interface.salam
// EXPECT: E001
struct Dog:
    pub func bark(): str: ret "woof" end
end

func use<T: Dog>(a: T):
    println a.bark()
end
func main:
    use(Dog {})
end
